2011-09-01  Michael Nordman  <michaeln@google.com>

        [Chromium] Fix a crashing bug due to raciness around SQL database shutdown.
        https://bugs.webkit.org/show_bug.cgi?id=67457

        The removeOpenDatabase() method can get called multiple times.
        Subsequent calls to it should be harmeless instead of cause a crash.

        Reviewed by David Levin.

        * storage/chromium/DatabaseTrackerChromium.cpp:
        (WebCore::DatabaseTracker::removeOpenDatabase):

2011-09-01  Kent Tamura  <tkent@chromium.org>

        The filename text color of a file upload control should be inherited.
        https://bugs.webkit.org/show_bug.cgi?id=67368

        Reviewed by Darin Adler.

        * css/html.css:
        (input[type="file"]):
        Add 'color: inherit'.
        The declaration for 'input' contains 'color: initial;'. So a file
        upload control has had black foreground color unless it has been
        specified 'color' property explicitly.
        Because a file upload control uses inherited background color, the
        foreground color also should be inherited.

2011-09-01  Kentaro Hara  <haraken@google.com>

        Generate a Worker constructor of V8 using the IDL 'Constructor' extended attribute
        https://bugs.webkit.org/show_bug.cgi?id=67447

        Reviewed by Dimitri Glazkov.

        Test: fast/workers/worker-constructor.html
              fast/workers/worker-event-listener.html

        * bindings/v8/custom/V8WorkerCustom.cpp: Removed constructorCallback().
        * workers/Worker.idl: Added the 'Constructor' extended attribute.

2011-09-01  Kentaro Hara  <haraken@google.com>

        Generate a FileReader constructor of V8 using the IDL 'Constructor' extended attribute
        https://bugs.webkit.org/show_bug.cgi?id=67412

        Reviewed by Adam Barth.

        Test: fast/files/blob-slice-test.html
              fast/files/file-reader-abort.html
