@@ -31,7 +31,7 @@
 
 @implementation WebDashboardRegion
 
-- initWithRect:(NSRect)r clip:(NSRect)c type:(WebDashboardRegionType)t
+- (id)initWithRect:(NSRect)r clip:(NSRect)c type:(WebDashboardRegionType)t
 {
     self = [super init];
     rect = r;
