@@ -1,3 +1,11 @@
+2011-09-01  Mark Rowe  <mrowe@apple.com>
+
+        Fix the build by adding some more missing return types.
+
+        * WebView/WebDashboardRegion.h:
+        * WebView/WebDashboardRegion.mm:
+        (-[WebDashboardRegion initWithRect:clip:type:]):
+
 2011-09-01  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION: Rendering artifacts on a rotated, pattern filled shape
